--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "description": "a Sails application",
   "dependencies": {
-    "sails": "0.9.0RC",
+    "sails": "0.9.3",
     "grunt": "0.4.1",
+    "sails-disk": "~0.9.0",
+    "ejs": "0.8.4",
     "optimist": "0.3.4",
     "passport": "latest",
     "passport-local": "latest",
